--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -38,6 +38,7 @@ on fs
     symlink /dev/block/platform/soc.0/${ro.boot.bootdevice} /dev/block/bootdevice
 
     mount_all /vendor/etc/fstab.qcom --early
+    write /proc/sys/vm/swappiness 100
 
     swapon_all /vendor/etc/fstab.qcom
     write /proc/sys/vm/page-cluster 0
